# hunter-bot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.rst
docs/: Makefile  build-docs.rst  conf.py  index.rst  install-rust.rst  install.rst  spelling.txt
src/: commands.rs  config.rs  logger.rs  logger_macros.rs  main.rs  utilities.rs  webhooks.rs
