[package]
name = "hunter-bot"
version = "0.1.0"
authors = ["Cyberunner23 <narutoxela@gmail.com>"]

[dependencies]
chrono     = "0.2"
clap       = "*"
hyper      = "*"
iron       = "*"
log        = "0.3"
openssl    = "*"
rand       = "*"
regex      = "*"
serde      = "*"
serde_json = "*"
thread-id  = "2.0.0"
toml       = "*"